fixed overflow issues in Chrome, Edge

--- a/src/styles/base/_base.sass
+++ b/src/styles/base/_base.sass
@@ -2,16 +2,28 @@
 
 html 
     scroll-behavior: smooth
+    overflow-x: hidden
 body
     overflow-x: hidden
     overflow-y: auto
     font-family: Poppins
+    scrollbar-width: none
+
+    
+    
+    
 
     #root 
         min-height: 100vh
         width: 100%
         overflow-y: auto
         background-color: c.$secondary-color
+        scrollbar-width: none
+        overflow-x: hidden
+        overflow-y: auto
+
+        &::-webkit-scrollbar
+            display: none
 
     // pointer-events: none
     -webkit-user-select: none
