--- a/src/styles/components/_card.sass
+++ b/src/styles/components/_card.sass
@@ -10,6 +10,9 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3)
     // text-align: justify
 
+    &::-webkit-scrollbar
+        display: none
+
     .card-title
         align-items: center
         color: c.$primary-color
