--- a/src/styles/components/_gameboy.sass
+++ b/src/styles/components/_gameboy.sass
@@ -21,7 +21,7 @@
         align-self: center
 
 #instructions
-    // align-self: center
+    align-self: stretch
     margin: 10px
     background-color: c.$secondary-color
     color: c.$primary-color
@@ -30,7 +30,7 @@
         color: c.$pink
 
     .instructions 
-        align-self: center
+        // align-self: center
         p
             font-size:  calc(res.$body-font-size + 2px)
             text-align: justify
@@ -207,7 +207,7 @@
 
 @media (max-width: 700px)
     #gameboy
-        flex-direction: column-reverse
+        flex-direction: column
         padding: 0 
 
     .game-screen-container
