--- a/src/styles/components/_svg-button.sass
+++ b/src/styles/components/_svg-button.sass
@@ -3,6 +3,7 @@
 .svg-button
     width: 32px
     height: 32px
+    padding: 0 5px 0 5px
     a
         height: 100%
         width: 100%
@@ -11,4 +12,5 @@
         
     i
         font-size: 2em
+        
         color: c.$primary-color-2
