--- a/src/styles/sections/_hero.sass
+++ b/src/styles/sections/_hero.sass
@@ -2,6 +2,7 @@
 @use '../base/_colorscheme' as c
 
 .hero
+    overflow-x: hidden
     height: 100vh
     width: 100vw
     animation: clip-hero-anim 1.25s cubic-bezier(0.29, 0.8, 0.8, 0.98)
