--- a/src/styles/sections/_projects.sass
+++ b/src/styles/sections/_projects.sass
@@ -6,3 +6,5 @@
     color: c.$white
     overflow-y: scroll
     padding: calc(res.$default-padding / 2)
+    &::-webkit-scrollbar
+        display: none
