--- a/src/styles/sections/_section_separator.sass
+++ b/src/styles/sections/_section_separator.sass
@@ -2,10 +2,11 @@
 
 .section-separator
     background-color: c.$secondary-color
-    // box-shadow:  inset 0 0 10px rgba(255, 255, 255, 0.5)
     z-index: 5
     margin: 10px
-    // border-radius: 
+
+    &::-webkit-scrollbar
+        display: none
 
     #section-title
         padding: 0
